Address a couple sonar issues